# fastapi_server

./: .env  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backup/: serverless.sql
bruno/: Get Credential Sources.bru  Get Token.bru  Get Who.bru  Healthcheck.bru  bruno.json
bruno/environments/: local.bru
model-generator/: Dockerfile  requirements.txt
src/: config.py  main.py
src/domain/exceptions/: HttpException.py  NonAuthorize.py  Unauthorized.py  __init__.py
src/entities/: __init__.py  database_models.py
src/infrastructure/: __init__.py  get_db.py
src/infrastructure/auth/: __init__.py  has_access.py  jwt_decode.py
src/infrastructure/unit_of_work/: UnitOfWork.py
src/infrastructure/unit_of_work/repositories/: BaseRepository.py  CredentialSourceRepository.py  __init__.py
